syntax = "proto3";
package SynthesisServer.Proto;

import "google/protobuf/Any.proto";

// All information about clients both on host and client side
message GameUpdate {
	
	// Most likely use signals from mirabuf here but this allows easy adapting of what is being sent
	repeated google.protobuf.Any client_data = 1;
}